# AnitaAnalysisFramework

./: .gitmodules  CMakeLists.txt  LinkDef.h  Makefile  Makefile.arch  Makefile.config  README  README.md  README.response  makeTUFFImpulseResponses.sh  rootlogon.C
calib/: anita3OverwrittenEventInfo.txt
data/response/HarmSignalOnly/: allVpol.imp
data/response/IndividualBRotter/: 01BH.imp  01TV.imp  02BH.imp  03BH.imp  03MH.imp  04BV.imp  04MV.imp  05MH.imp  06BV.imp  06MV.imp  07BH.imp  08BH.imp  08TH.imp  09BV.imp  10MH.imp  11BV.imp  11MV.imp  12MV.imp  12TV.imp  13BV.imp  13TV.imp  14TV.imp  15BV.imp  16MH.imp  16MV.imp  16TH.imp
data/response/TUFFs/notches_250_375_0/: 01BH.imp  01BV.imp  01MH.imp  01MV.imp  01TH.imp  01TV.imp  02BV.imp  03BH.imp  03BV.imp  03MH.imp  04BH.imp  04TV.imp  05BH.imp  05BV.imp  05MV.imp  06BV.imp  06TV.imp  07MH.imp  07MV.imp  07TH.imp  08MV.imp  09BV.imp  09TH.imp  10BH.imp  10TV.imp  11MV.imp  11TV.imp  12MH.imp  12TH.imp  12TV.imp  13BV.imp  13MH.imp  14MH.imp  14TV.imp  15BH.imp  15BV.imp  15MH.imp  15TH.imp  15TV.imp  16BV.imp  (+4 more)
data/response/TUFFs/notches_260_0_0/: 01BH.imp  01MH.imp  01TV.imp  02MH.imp  02MV.imp  02TV.imp  03BH.imp  03MV.imp  03TV.imp  04BV.imp  04MH.imp  04MV.imp  04TH.imp  04TV.imp  06BV.imp  06MH.imp  06MV.imp  06TH.imp  07BH.imp  07MH.imp  07MV.imp  07TH.imp  08MH.imp  09MH.imp  09MV.imp  09TH.imp  09TV.imp  10BV.imp  10MH.imp  10MV.imp  11BH.imp  11MH.imp  11MV.imp  11TV.imp  12BV.imp  12MH.imp  12TV.imp  13BH.imp  13BV.imp  13MH.imp  (+10 more)
data/response/TUFFs/notches_260_0_460/: 01BH.imp  01BV.imp  01MV.imp  01TV.imp  02BH.imp  02BV.imp  02TH.imp  02TV.imp  03BV.imp  04BH.imp  04MH.imp  04MV.imp  04TH.imp  05BH.imp  05MV.imp  06BV.imp  06MH.imp  06MV.imp  06TH.imp  06TV.imp  07BV.imp  07MH.imp  07TH.imp  07TV.imp  08BH.imp  08BV.imp  08MH.imp  08MV.imp  08TH.imp  08TV.imp  09BV.imp  09MH.imp  (+18 more)
data/response/TriggerBRotter/: 16BH.imp
data/responses/: BH13TransferFn.root  BH13TransferFn2020.root  ResponseA4
data/responses/A4ImpulseTUFFs/: README  trigconfigA.imp  trigconfigB.imp  trigconfigC.imp  trigconfigG.imp  trigconfigK.imp  trigconfigO.imp  trigconfigP.imp
data/responses/A4ImpulseTUFFs2018/: index.txt  trigconfigB.imp
data/responses/A4ImpulseTUFFs2019/: README  trigconfigK.imp
data/responses/A4OldImpulseTUFFs/: trigconfigO.imp  trigconfigP.imp
data/responses/A4noNotches/: 01BV.imp  01MH.imp  01TH.imp  02BH.imp  02BV.imp  02MH.imp  02TV.imp  03BH.imp  03MH.imp  03TV.imp  05BV.imp  05MV.imp  05TH.imp  06MV.imp  06TV.imp  07MH.imp  08BH.imp  08TH.imp  09MV.imp  10MV.imp  10TV.imp  11MV.imp  12MH.imp  12MV.imp  13BH.imp  13BV.imp  14BH.imp  14MH.imp  14MV.imp  15BH.imp  15MV.imp  16BH.imp  16MH.imp  fullTF_01BH.txt  fullTF_01BV.txt  fullTF_01MH.txt  fullTF_01MV.txt  fullTF_01TH.txt  fullTF_01TV.txt  fullTF_02BH.txt  (+89 more)
data/responses/HarmSignalOnly/: allHpol.imp
data/responses/IndividualBRotter/: 01BH.imp  01BV.imp  01MH.imp  01MV.imp  01TH.imp  01TV.imp  02BH.imp  02BV.imp  02MH.imp  02MV.imp  02TH.imp  02TV.imp  03BH.imp  03BV.imp  03MH.imp  03MV.imp  03TH.imp  03TV.imp  04BH.imp  04BV.imp  04MH.imp  04MV.imp  04TH.imp  04TV.imp  05BH.imp  05BV.imp  05MH.imp  05MV.imp  05TH.imp  05TV.imp  06BH.imp  06BV.imp  06MH.imp  06MV.imp  06TH.imp  06TV.imp  07BH.imp  07BV.imp  07MH.imp  07MV.imp  (+56 more)
data/responses/SingleBRotter/: all.imp
data/responses/TUFFs/: convolveTUFFS_trigger.C  index.txt  trigconfigA.imp  trigconfigB.imp  trigconfigC.imp  trigconfigG.imp  trigconfigJ.imp  trigconfigK.imp  trigconfigO.imp  trigconfigP.imp
data/responses/TriggerBRotter/: 16BH.imp
data/templates/: averageA3CR.txt  averageA3CR_notches_250_375_0.txt  averageA3CR_notches_260_0_0.txt  averageA3CR_notches_260_0_460.txt  averageA3CR_notches_260_365_0.txt  averageA3CR_notches_260_375_0.txt  averageA3CR_notches_260_375_460.txt  averageA3CR_notches_260_385_0.txt  averageA4CR_notches_250_375_0.txt  averageA4CR_notches_260_0_0.txt  averageA4CR_notches_260_0_460.txt  averageA4CR_notches_260_365_0.txt  averageA4CR_notches_260_375_0.txt  averageA4CR_notches_260_375_460.txt  averageA4CR_notches_260_385_0.txt  crTmpltsA3.root  crTmpltsA4_notches_250_375_0.root  crTmpltsA4_notches_260_0_0.root  crTmpltsA4_notches_260_0_460.root  crTmpltsA4_notches_260_365_0.root  crTmpltsA4_notches_260_375_0.root  crTmpltsA4_notches_260_375_460.root  crTmpltsA4_notches_260_385_0.root  deconvolvedCRA3average.txt  deconvolvedCRA4average.txt  waisTemplateA3.root  waisTemplateA4.root
data/tuffModels/: configA.root  configB.root  configC.root  configG.root  configJ.root  configK.root  configO.root  configP.root
doc/: Doxyfile  doc.dox
include/: AllCorrelationSummaryAnita4.h  AnalysisWaveform.h  AnitaEventFaker.h  AnitaEventReconstructor.h  AnitaEventSummary.h  AnitaNoiseSummary.h  AnitaTMVA.h  AnitaTemplateResults.h  AnitaTemplates.h  BandwidthMeasure.h  BasicFilters.h  BlindDataset.h  CorrelationSummaryAnita4.h  DiodeFilter.h  FilterOperation.h  FilterStrategy.h  FilteredAnitaEvent.h  FreqDomainFunction.h  GeomFilter.h  ImpulsivityMeasure.h  InterpolatedNotch.h  NoiseMonitor.h  Polarimetry.h  PrettyAnalysisWaveform.h  ResponseManager.h  SensitivityCalculator.h  SystemResponse.h  TGraphAligned.h  TaperFilter.h
macros/: ALFASpectrum.C  TMVAExample.C  convolveTUFFS.C  convolveTUFFSA4.C  finalCutsALudwig.C  fitTemplates.C  isItACosmicRay.C  makeConvolvedTemplates.C  makeNoiseTree.C  noise.C  poissonPosterior.C  testDeconv.C  testDelays.C  testEvalEven.C  testFaker.C  testWaveform.C
src/: AllCorrelationSummaryAnita4.cc  AnalysisWaveform.cc  AnitaEventFaker.cc  AnitaEventSummary.cc  AnitaNoiseSummary.cc  AnitaTMVA.cc  AnitaTemplateResults.cc  AnitaTemplates.cc  BandwidthMeasure.cc  BasicFilters.cc  BlindDataset.cc  CorrelationSummaryAnita4.cc  DiodeFilter.cc  FilterOperation.cc  FilterStrategy.cc  FilteredAnitaEvent.cc  FreqDomainFunction.cc  GeomFilter.cc  ImpulsivityMeasure.cc  InterpolatedNotch.cc  NoiseMonitor.cc  Polarimetry.cc  PrettyAnalysisWaveform.cc  ResponseManager.cc  SensitivityCalculator.cc  SystemResponse.cc  TGraphAligned.cc  TaperFilter.cc
(+2368 files in other folders)
